Minor Edit: overflow: hidden - avoid whitespace

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,7 +27,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    /* overflow: hidden; */
+    overflow: hidden; 
     padding-top: 8%
 }
 
